SigmaCodebackup3rdSep/objects/Brewery_Registry__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brewer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brewer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brewery Registries</relationshipLabel>
        <relationshipName>Brewery_Registries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brewery_Name__c</fullName>
        <label>Brewery Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVV__c</fullName>
        <label>CVV</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Expiry_Date__c</fullName>
        <label>Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Registration__c</fullName>
        <label>Date of Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Link__c</fullName>
        <label>Payment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Fees__c</fullName>
        <label>Platform Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                    <default>true</default>
                    <label>Registered</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Payment_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Payment Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Address_On_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Address On Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TermsConditions__c</fullName>
        <label>TermsConditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Brewery Registry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brewery_Name__c</columns>
        <columns>Brewer_Account__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Registration_Status__c</columns>
        <columns>Contact_Person__c</columns>
        <columns>Address__c</columns>
        <columns>Postcode__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Brewery Registry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brewery Registries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>